# StorageSwap

./: .replit  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  prometheus.yml  pyproject.toml  run.py  start.sh
.github/workflows/: ci-cd.yml
app/: main.py
app/api/routes/: listings.py  users.py
app/core/: config.py  security.py
app/crud/: __init__.py  listings.py  users.py
app/db/: database.py
app/models/: models.py
app/schemas/: bookings.py  listings.py  messages.py  reviews.py  users.py
attached_assets/: Pasted-Run-docker-build-push-action-v4-GitHub-Actions-runtime-token-ACs-Docker-info-Proxy-configurat-1745057077999.txt  Pasted-Run-docker-build-push-action-v4-with-context-push-true-no-cache-true-ta-1745082341418.txt  Pasted-Skip-to-content-Navigation-Menu-JoarFj-StorageSwap-Type-to-search-Code-Issues-Pull-reques-1745012979418.txt
client/: package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/components/home/: AppCTA.tsx  FAQ.tsx  FeaturedListings.tsx  HeroSection.tsx  HostCTA.tsx  HowItWorks.tsx  Newsletter.tsx  SpaceTypes.tsx  Testimonials.tsx
client/src/components/layout/: Footer.tsx  Header.tsx
client/src/hooks/: useGeolocation.ts
client/src/lib/: utils.ts
client/src/pages/: CreateListing.tsx  Home.tsx  ListingDetail.tsx  Messages.tsx  SearchListings.tsx  UserProfile.tsx
k8s/: deployment.yaml
migrations/: env.py
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
storage_space_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+5 files in other folders)
